Hotfix: change categories fetching from names only to id with names
