# src/main/resources/static/openapi.yaml
@@ -32,10 +32,11 @@ paths:
           format: int32
       - in: query
         name: category
-        description: The product category
+        description: The id of the product category
         required: false
         schema:
-          type: string
+          type: integer
+          format: int64
       - in: query
         name: minPrice
         description: The minimal price of a product
@@ -127,7 +128,7 @@ paths:
     get:
       tags:
       - Product categories
-      summary: Finds all category names
+      summary: Finds all product categories
       responses:
         200:
           description: Normal response
@@ -136,11 +137,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: string
-                example:
-                  - Овцы
-                  - Коровы
-                  - Свиньи
+                  $ref: '#/components/schemas/ProductCategory'
 components:
   schemas:
     Product:
@@ -207,6 +204,16 @@ components:
           - 1
           - 2
           - 3
+    ProductCategory:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        categoryName:
+          type: string
+          example: Овцы
     InvalidRequestParametersProblem:
       type: object
       properties:
